--- a/assets/presentations/build-process/index.html
+++ b/assets/presentations/build-process/index.html
@@ -109,7 +109,7 @@
       </section>
       <section>
         <h3>- substitute text -</h3>
-        <small><b>RECALL:</b> In C, there is no built-in dynamic arrays</small>
+        <small><b>RECALL:</b> In C89, there is no variable length array support</small>
         <pre><code class = "cpp">
           int max_buffer_size = 10;
           int arr[max_buffer_size];
